MainMenu and EndScene implementation v2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ list(APPEND GAME_SOURCE
      Classes/SplashScene.cpp
      Classes/MainMenuScene.cpp
      Classes/GameScene.cpp
-     Classes/UI.cpp
+     Classes/EndScene.cpp
      ${PLATFORM_SPECIFIC_SRC}
      )
 list(APPEND GAME_HEADER
@@ -68,7 +68,7 @@ list(APPEND GAME_HEADER
      Classes/SplashScene.h
      Classes/MainMenuScene.h
      Classes/GameScene.h
-     Classes/UI.h
+     Classes/EndScene.h
      ${PLATFORM_SPECIFIC_SRC}
      )
 
